--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,9 +3,16 @@ h1,h2 {
     margin: 30px;
     margin-bottom: 10px;
 }
-
+body {
+    font-family: 'Courier New', Courier, monospace;
+    background-color: seashell;
+}
 .profile {
-    width: 300px
+    width: 300px;
+    border-radius: 10px;
+}
+.about-me {
+    font-size: larger;
 }
 
 .row {
@@ -79,6 +86,7 @@ h1,h2 {
 
 .navbar {
     margin: 10px;
+    margin-bottom: 20px;
     padding: 10px;
     overflow: hidden;
     background-color: teal;
